--- a/rxactivity-processor/build.gradle
+++ b/rxactivity-processor/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'java-library'
+    id 'com.github.dcendents.android-maven'
 }
+
+group='com.github.voisen'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
