--- a/rxactivity-processor/build.gradle
+++ b/rxactivity-processor/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'com.github.dcendents.android-maven'
 }
 
-group='com.github.voisen'
+//group='com.github.voisen'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
