--- a/rxactivity-processor/build.gradle
+++ b/rxactivity-processor/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id 'com.github.dcendents.android-maven'
+    //id 'com.github.dcendents.android-maven'
 }
 
 //group='com.github.voisen'
