提取注解模块

--- a/rxactivity-processor/build.gradle
+++ b/rxactivity-processor/build.gradle
@@ -5,6 +5,9 @@ plugins {
 
 group='com.github.voisen'
 
+
+
+
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
@@ -16,4 +19,5 @@ dependencies {
     implementation group: 'com.squareup', name: 'javapoet', version: '1.13.0'
     implementation 'com.google.auto.service:auto-service:1.0'
     annotationProcessor 'com.google.auto.service:auto-service:1.0'
+    implementation project(path: ':rxactivity-annotations')
 }
