--- a/rxactivity/build.gradle
+++ b/rxactivity/build.gradle
@@ -32,11 +32,10 @@ android {
 }
 
 dependencies {
-
+    api project(path: ':rxactivity-annotations')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    api project(path: ':rxactivity-processor')
 }
