--- a/rxactivity-processor/build.gradle
+++ b/rxactivity-processor/build.gradle
@@ -1,10 +1,7 @@
-plugins {
-    id 'java-library'
-    id 'com.github.dcendents.android-maven'
-}
+apply plugin: 'java-library'
+apply plugin: 'com.github.dcendents.android-maven'
 
-group='com.github.voisen'
-
+group="com.github.voisen"
 
 
 java {
@@ -14,6 +11,7 @@ java {
 
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     // https://mvnrepository.com/artifact/com.squareup/javapoet
     implementation group: 'com.squareup', name: 'javapoet', version: '1.13.0'
     implementation 'com.google.auto.service:auto-service:1.0'
