--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation project(':rxactivity-processor')
-    annotationProcessor project(':rxactivity-processor')
+    implementation project(':rxactivityprocessor')
+    annotationProcessor project(':rxactivityprocessor')
     implementation project(path: ':rxactivity')
     implementation project(path: ':app2lib')
 }
