--- a/app2lib/build.gradle
+++ b/app2lib/build.gradle
@@ -36,11 +36,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    implementation project(path: ':rxactivity-processor')
+    implementation project(path: ':rxactivityprocessor')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation project(path: ':rxactivity')
-    annotationProcessor project(path: ':rxactivity-processor')
+    annotationProcessor project(path: ':rxactivityprocessor')
 }
