--- a/rxactivity/build.gradle
+++ b/rxactivity/build.gradle
@@ -30,7 +30,7 @@ android {
 }
 
 dependencies {
-    api project(path: ':rxactivity-annotations')
+    api project(path: ':rxactivityannotations')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     testImplementation 'junit:junit:4.+'
