--- a/rxactivityprocessor/build.gradle
+++ b/rxactivityprocessor/build.gradle
@@ -16,5 +16,5 @@ dependencies {
     implementation group: 'com.squareup', name: 'javapoet', version: '1.13.0'
     implementation 'com.google.auto.service:auto-service:1.0'
     annotationProcessor 'com.google.auto.service:auto-service:1.0'
-    implementation project(path: ':rxactivity-annotations')
+    implementation project(path: ':rxactivityannotations')
 }
