--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.voisen.rxactivity">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -9,6 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.RxActivity">
         <activity android:name=".image.ImageActivity"></activity>
         <activity
