--- a/rxactivityannotations/build.gradle
+++ b/rxactivityannotations/build.gradle
@@ -1,5 +1,7 @@
-apply plugin: 'java-library'
-apply plugin: 'com.github.dcendents.android-maven'
+plugins {
+    id 'java-library'
+    id 'com.github.dcendents.android-maven'
+}
 
 group="com.github.voisen"
 
@@ -10,11 +12,4 @@ dependencies {
 java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
-}
-
-install {
-    repositories.mavenInstaller {
-        addFilter('api') { artifact, file -> artifact.name.endsWith('api') }
-        addFilter('impl') { artifact, file -> artifact.name.endsWith('impl') }
-    }
 }
