--- a/rxactivity/build.gradle
+++ b/rxactivity/build.gradle
@@ -1,7 +1,8 @@
-apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-
-group='com.github.voisen'
+plugins {
+    id 'com.android.library'
+//    id 'com.github.dcendents.android-maven'
+}
+//group="com.github.voisen"
 
 android {
     compileSdkVersion 30
@@ -37,3 +38,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
