--- a/rxactivityprocessor/build.gradle
+++ b/rxactivityprocessor/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java-library'
-    id 'com.github.dcendents.android-maven'
+//    id 'com.github.dcendents.android-maven'
 }
-group="com.github.voisen"
+//group="com.github.voisen"
 
 
 
