删除文件，构建包

--- a/rxactivity/build.gradle
+++ b/rxactivity/build.gradle
@@ -1,8 +1,11 @@
 plugins {
     id 'com.android.library'
-    id 'maven'
-//    id 'com.github.dcendents.android-maven'
+    id 'com.github.dcendents.android-maven'
 }
+
+group="com.github.voisen"
+
+
 group="com.github.voisen"
 
 android {
