--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'maven-publish'
 }
 
 android {
@@ -49,5 +50,4 @@ dependencies {
     implementation project(':rxactivityprocessor')
     annotationProcessor project(':rxactivityprocessor')
     implementation project(path: ':rxactivity')
-    implementation project(path: ':app2lib')
 }
