--- a/rxactivityannotations/build.gradle
+++ b/rxactivityannotations/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java-library'
-    id 'maven'
-//    id 'com.github.dcendents.android-maven'
+    id 'com.github.dcendents.android-maven'
 }
 
 group="com.github.voisen"
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
