--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ android.enableJetifier=true
 #org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
+#org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
